--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.9",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
@@ -33,6 +34,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
